--- a/one-payment-be/package.json
+++ b/one-payment-be/package.json
@@ -5,7 +5,9 @@
   "main": "index.js",
   "dependencies": {
     "body-parser": "^1.19.0",
-    "express": "^4.17.1"
+    "express": "^4.17.1",
+    "nedb": "^1.8.0",
+    "qrcode": "^1.4.4"
   },
   "devDependencies": {},
   "scripts": {
